Alteracao de nomenclatura dos arquivos

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-<mainClass>br.ufscar.dc.compiladores.LA.lexico.Principal</mainClass>
+<mainClass>br.ufscar.dc.compiladores.LA.Principal</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
