--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <visitor>true</visitor>
+                </configuration>
             </plugin>            
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
